# dbpc-test

./: .gitignore  Makefile.am  configure.ac
dbpc-server/: .gitignore  Makefile.am  connection.c  connection.h  dbpc.c  dbpc.h  dbpc_dbus.c  source.c  source.h  source_list.c  source_list.h  source_plugin.c  source_plugin.h  tag.c  tag.h  tag_bool.c  tag_bool.h  tag_int.c  tag_int.h  tag_list.c  tag_list.h  utils.c  utils.h  value.c  value.h
dbpc-server/sources/: file_test.c  file_test.h
src/: Makefile.am  dbpc.c  dbpc.h  ideas.txt  source_list.c  source_list.h  source_plugin.c  source_plugin.h  tag.c  tag.h  tag_list.h  value.c  value.h
